eks-with-module-17.11/load_balancer.tf
resource "aws_lb" "eks" {
  name               = "eks"
  internal           = true
  load_balancer_type = "network"
  subnets            = local.subnets

  enable_deletion_protection = false

  tags = {
    Environment = "test"
  }
}

resource "aws_lb_target_group" "istio_80_31381" {
  name        = "istio-80-31381"
  port        = 31381
  protocol    = "TCP"
  vpc_id      = var.vpc_id
  target_type = var.istio_target_group_type

  health_check {
    path = "/healthz/ready"
    port = "31371"
  }
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.eks.arn
  port              = "80"
  protocol          = "TCP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.istio_80_31381.arn
  }
}


# # data "template_file" "aws_loadbalancer_controller_assume_role_policy" {
# #   template = file("${path.module}/templates/elb-assume-policy.json.tpl")
# #   vars = {
# #     oidc_arn = module.eks.oidc_provider_arn
# #     oidc_url = replace(module.eks.cluster_oidc_issuer_url, "https://", "")
# #   }
# # }

# # resource "aws_iam_role" "aws_loadbalancer_controller" {
# #   name               = "aws-loadbalancer-controller"
# #   assume_role_policy = data.template_file.aws_loadbalancer_controller_assume_role_policy.rendered
# #   depends_on = [
# #     module.eks,
# #     data.aws_eks_cluster_auth.cluster
# #   ]
# # }

# # resource "aws_iam_policy" "aws_loadbalancer_controller" {
# #   name        = "aws-loadbalancer-controller"
# #   path        = "/"
# #   description = "Load balancer policy"

# #   policy = <<POLICY
# # {
# #   "Version": "2012-10-17",
# #   "Statement": [
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "iam:CreateServiceLinkedRole",
# #         "ec2:DescribeAccountAttributes",
# #         "ec2:DescribeAddresses",
# #         "ec2:DescribeAvailabilityZones",
# #         "ec2:DescribeInternetGateways",
# #         "ec2:DescribeVpcs",
# #         "ec2:DescribeSubnets",
# #         "ec2:DescribeSecurityGroups",
# #         "ec2:DescribeInstances",
# #         "ec2:DescribeNetworkInterfaces",
# #         "ec2:DescribeTags",
# #         "ec2:GetCoipPoolUsage",
# #         "ec2:DescribeCoipPools",
# #         "elasticloadbalancing:DescribeLoadBalancers",
# #         "elasticloadbalancing:DescribeLoadBalancerAttributes",
# #         "elasticloadbalancing:DescribeListeners",
# #         "elasticloadbalancing:DescribeListenerCertificates",
# #         "elasticloadbalancing:DescribeSSLPolicies",
# #         "elasticloadbalancing:DescribeRules",
# #         "elasticloadbalancing:DescribeTargetGroups",
# #         "elasticloadbalancing:DescribeTargetGroupAttributes",
# #         "elasticloadbalancing:DescribeTargetHealth",
# #         "elasticloadbalancing:DescribeTags"
# #       ],
# #       "Resource": "*"
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "cognito-idp:DescribeUserPoolClient",
# #         "acm:ListCertificates",
# #         "acm:DescribeCertificate",
# #         "iam:ListServerCertificates",
# #         "iam:GetServerCertificate",
# #         "waf-regional:GetWebACL",
# #         "waf-regional:GetWebACLForResource",
# #         "waf-regional:AssociateWebACL",
# #         "waf-regional:DisassociateWebACL",
# #         "wafv2:GetWebACL",
# #         "wafv2:GetWebACLForResource",
# #         "wafv2:AssociateWebACL",
# #         "wafv2:DisassociateWebACL",
# #         "shield:GetSubscriptionState",
# #         "shield:DescribeProtection",
# #         "shield:CreateProtection",
# #         "shield:DeleteProtection"
# #       ],
# #       "Resource": "*"
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "ec2:AuthorizeSecurityGroupIngress",
# #         "ec2:RevokeSecurityGroupIngress"
# #       ],
# #       "Resource": "*"
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "ec2:CreateSecurityGroup"
# #       ],
# #       "Resource": "*"
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "ec2:CreateTags"
# #       ],
# #       "Resource": "arn:aws:ec2:*:*:security-group/*",
# #       "Condition": {
# #         "StringEquals": {
# #           "ec2:CreateAction": "CreateSecurityGroup"
# #         },
# #         "Null": {
# #           "aws:RequestTag/elbv2.k8s.aws/cluster": "false"
# #         }
# #       }
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "ec2:CreateTags",
# #         "ec2:DeleteTags"
# #       ],
# #       "Resource": "arn:aws:ec2:*:*:security-group/*",
# #       "Condition": {
# #         "Null": {
# #           "aws:RequestTag/elbv2.k8s.aws/cluster": "true",
# #           "aws:ResourceTag/elbv2.k8s.aws/cluster": "false"
# #         }
# #       }
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "ec2:AuthorizeSecurityGroupIngress",
# #         "ec2:RevokeSecurityGroupIngress",
# #         "ec2:DeleteSecurityGroup"
# #       ],
# #       "Resource": "*",
# #       "Condition": {
# #         "Null": {
# #           "aws:ResourceTag/elbv2.k8s.aws/cluster": "false"
# #         }
# #       }
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "elasticloadbalancing:CreateLoadBalancer",
# #         "elasticloadbalancing:CreateTargetGroup"
# #       ],
# #       "Resource": "*",
# #       "Condition": {
# #         "Null": {
# #           "aws:RequestTag/elbv2.k8s.aws/cluster": "false"
# #         }
# #       }
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "elasticloadbalancing:CreateListener",
# #         "elasticloadbalancing:DeleteListener",
# #         "elasticloadbalancing:CreateRule",
# #         "elasticloadbalancing:DeleteRule"
# #       ],
# #       "Resource": "*"
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "elasticloadbalancing:AddTags",
# #         "elasticloadbalancing:RemoveTags"
# #       ],
# #       "Resource": [
# #         "arn:aws:elasticloadbalancing:*:*:targetgroup/*/*",
# #         "arn:aws:elasticloadbalancing:*:*:loadbalancer/net/*/*",
# #         "arn:aws:elasticloadbalancing:*:*:loadbalancer/app/*/*"
# #       ],
# #       "Condition": {
# #         "Null": {
# #           "aws:RequestTag/elbv2.k8s.aws/cluster": "true",
# #           "aws:ResourceTag/elbv2.k8s.aws/cluster": "false"
# #         }
# #       }
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "elasticloadbalancing:AddTags",
# #         "elasticloadbalancing:RemoveTags"
# #       ],
# #       "Resource": [
# #         "arn:aws:elasticloadbalancing:*:*:listener/net/*/*/*",
# #         "arn:aws:elasticloadbalancing:*:*:listener/app/*/*/*",
# #         "arn:aws:elasticloadbalancing:*:*:listener-rule/net/*/*/*",
# #         "arn:aws:elasticloadbalancing:*:*:listener-rule/app/*/*/*"
# #       ]
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "elasticloadbalancing:ModifyLoadBalancerAttributes",
# #         "elasticloadbalancing:SetIpAddressType",
# #         "elasticloadbalancing:SetSecurityGroups",
# #         "elasticloadbalancing:SetSubnets",
# #         "elasticloadbalancing:DeleteLoadBalancer",
# #         "elasticloadbalancing:ModifyTargetGroup",
# #         "elasticloadbalancing:ModifyTargetGroupAttributes",
# #         "elasticloadbalancing:DeleteTargetGroup"
# #       ],
# #       "Resource": "*",
# #       "Condition": {
# #         "Null": {
# #           "aws:ResourceTag/elbv2.k8s.aws/cluster": "false"
# #         }
# #       }
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "elasticloadbalancing:RegisterTargets",
# #         "elasticloadbalancing:DeregisterTargets"
# #       ],
# #       "Resource": "arn:aws:elasticloadbalancing:*:*:targetgroup/*/*"
# #     },
# #     {
# #       "Effect": "Allow",
# #       "Action": [
# #         "elasticloadbalancing:SetWebAcl",
# #         "elasticloadbalancing:ModifyListener",
# #         "elasticloadbalancing:AddListenerCertificates",
# #         "elasticloadbalancing:RemoveListenerCertificates",
# #         "elasticloadbalancing:ModifyRule"
# #       ],
# #       "Resource": "*"
# #     }
# #   ]
# # }
# # POLICY
# # }

# # resource "aws_iam_role_policy_attachment" "aws_loadbalancer_controller" {
# #   policy_arn = aws_iam_policy.aws_loadbalancer_controller.arn
# #   role       = aws_iam_role.aws_loadbalancer_controller.name
# # }

# # data "template_file" "aws_loadbalancer_controller_service_account" {
# #   template = file("${path.module}/templates/elb-service-account.yaml.tpl")
# #   vars = {
# #     service_role_arn = aws_iam_role.aws_loadbalancer_controller.arn
# #   }
# # }

# # resource "kubectl_manifest" "aws_loadbalancer_controller_service_account" {
# #   yaml_body = data.template_file.aws_loadbalancer_controller_service_account.rendered
# #   depends_on = [
# #     module.eks,
# #     aws_iam_role.aws_loadbalancer_controller,
# #   ]
# # }

# # resource "helm_release" "aws_load_balancer" {
# #   name      = "aws-load-balancer-controller"
# #   chart     = "./helm/aws-load-balancer-controller"
# #   namespace = "kube-system"
# #   set {
# #     name  = "clusterName"
# #     value = var.cluster_name
# #   }
# #   set {
# #     name  = "vpcId"
# #     value = var.vpc_id
# #   }
# #   set {
# #     name  = "region"
# #     value = var.region
# #   }
# #   set {
# #     name  = "serviceAccount.create"
# #     value = false
# #   }
# #   set {
# #     name  = "serviceAccount.name"
# #     value = "aws-load-balancer-controller"
# #   }

# #   depends_on = [
# #     module.eks,
# #     data.aws_eks_cluster_auth.cluster,
# #     # kubectl_manifest.aws_loadbalancer_controller_service_account
# #   ]
# # }
